<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Média Artimética</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nota2">Nota 2:</string>
    <string name="Nota1">Nota 1:</string>
    <string name="Nota3">Nota 3:</string>
    <string name="Media">Média</string>
    <string name="exibeNota"></string>

</resources>
