<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LinearLayout" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nota1" />

    <EditText
        android:id="@+id/nota1"
        android:labelFor="@+id/nota1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nota2" />

    <EditText
        android:id="@+id/nota2"
        android:labelFor="@+id/nota2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nota3" />

    <EditText
        android:id="@+id/nota3"
        android:labelFor="@+id/nota3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button 
        android:id="@+id/btnMedia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Media"
        android:onClick="btnMediaClick"/>

     <TextView
        android:id="@+id/lblMedia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="42sp"
        android:text="@string/exibeNota" />

     <TextView
        android:id="@+id/lblAprovacao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="42sp" />
     
</LinearLayout>
